--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -14,17 +14,8 @@
     </div>
     <div class="regform_div">
         <form method="post">
-            {{ form.hidden_tag() }}
             <ul>
-                <li>{{ form.email.label() }}</li>
-                <li>{{ form.email() }}</li>
-                <li>{{ form.username.label() }}</li>
-                <li>{{ form.username() }}</li>
-                <li>{{ form.password.label() }}</li>
-                <li>{{ form.password() }}</li>
-                <li>{{ form.confirm_password.label() }}</li>
-                <li>{{ form.confirm_password() }}</li>
-                <li>{{ form.submit() }}</li>
+                <input for="username" id="username" type="text">
             </ul>
         </form>
     </div>
