--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 <body>
-    {{}}
+    <div class="error_block">
+        {% for err in get_flashed_messages()%}
+            <li>{{ err }}</li>
+        {% endfor%}
+    </div>
+    <div class="regform_div">
+        <form method="post" action={{ url_for('auth.login') }} enctype="application/x-www-form-urlencoded">
+            <li><label>Username</label></li>
+            <li><input type="text" name="username"></li>
+            <li><label>Password</label></li>
+            <li><input type="password" name="password"></li>
+            <li><input type="submit" value="Login"></li>
+        </form>
+    </div>
 </body>
 </html>
