--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Register</title>
 </head>
 <body>
     <div class="error_block">
@@ -14,11 +14,15 @@
     </div>
     <div class="regform_div">
         <form method="post" action={{ url_for('auth.register') }} enctype="application/x-www-form-urlencoded">
-            <input type="" name="email">
-            <input type="text" name="username">
-            <input type="password" name="password">
-            <input type="password" name="confirm_password">
-            <input type="submit">
+            <li><label>Email</label></li>
+            <li><input type="email" name="email"></li>
+            <li><label>Username</label></li>
+            <li><input type="text" name="username"></li>
+            <li><label>Password</label></li>
+            <li><input type="password" name="password"></li>
+            <li><label>Confirm password</label></li>
+            <li><input type="password" name="confirm_password"></li>
+            <li><input type="submit" value="Register"></li>
         </form>
     </div>
 </body>
