--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,5 +4,5 @@ body {
   overflow: auto;
   height: 100%;
 }
-@import "./calendar/calendar.scss";
-@import "./calendar/hours.scss";
+@import './calendar/calendar.scss';
+@import './calendar/hours.scss';
