add sections + podjyatiy landing

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -16,5 +16,6 @@ body {
     box-sizing: border-box;
   }
 }
-@import './calendar/calendar.scss';
-@import './calendar/hours.scss';
+@import "./calendar/calendar.scss";
+@import "./calendar/hours.scss";
+@import "./project-section/project-section.scss";
