--- a/styles/public/header.scss
+++ b/styles/public/header.scss
@@ -1,24 +1,31 @@
 .header {
-	box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.12);
-	padding: 12px 0;
-	&__container,
-	&__container > div {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-	}
-	&__links-container {
-		width: 390px;
-		margin-left: auto;
-		margin-right: 80px;
-		a {
-			font-size: 2rem;
-			line-height: 20px;
-		}
-	}
-	&__nav-link {
-	}
-	&__actions-container {
-		width: 246px;
-	}
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.12);
+  padding: 12px 0;
+  font-size: 2rem;
+  &__container,
+  &__container > div {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+  &__links-container {
+    width: 390px;
+    margin-left: auto;
+    margin-right: 80px;
+    a {
+      font-size: 2rem;
+      line-height: 20px;
+    }
+  }
+  &__nav-link {
+  }
+  &__actions-container {
+    width: 246px;
+  }
+}
+.logo {
+  position: relative;
+  width: 276px;
+  height: 48px;
+  cursor: pointer;
 }
