--- a/styles/home/facilities-section.scss
+++ b/styles/home/facilities-section.scss
@@ -27,6 +27,11 @@
 	&__img-container {
 		position: relative;
 		overflow: hidden;
+		width: 416px;
+		height: 240px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 	}
 	&__status {
 		position: absolute;
@@ -54,6 +59,8 @@
 	}
 	&__image {
 		z-index: 1;
+		width: 100%;
+		height: 100%;
 	}
 	&__info-container {
 		padding: 24px 32px 32px 32px;
